--- a/spring-dynamic-router/src/main/resources/application-jdbc.properties
+++ b/spring-dynamic-router/src/main/resources/application-jdbc.properties
@@ -1,8 +1,7 @@
 #数据库设置   (主数据源，默认的)
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.15.171:3306/gnet_ibd_iom_3_1
-#spring.datasource.url=jdbc:mysql://192.168.15.210:3306/ibus_oa_210
+spring.datasource.url=jdbc:mysql://
 spring.datasource.username=root
 spring.datasource.password=123456
 
@@ -10,7 +9,7 @@ spring.datasource.password=123456
 custom.datasource.names=0f4c83427f2e405ba23487159892b08d
 custom.datasource.0f4c83427f2e405ba23487159892b08d.type=com.alibaba.druid.pool.DruidDataSource
 custom.datasource.0f4c83427f2e405ba23487159892b08d.driverClassName=com.mysql.jdbc.Driver
-custom.datasource.0f4c83427f2e405ba23487159892b08d.url=jdbc:mysql://192.168.4.57:3306/gnet_ibd_iom_0f4c83427f2e405ba23487159892b08d
+custom.datasource.0f4c83427f2e405ba23487159892b08d.url=jdbc:mysql://
 custom.datasource.0f4c83427f2e405ba23487159892b08d.username=root
 custom.datasource.0f4c83427f2e405ba23487159892b08d.password=123456
 
